--- a/test/unlocker/unlocker.vcxproj
+++ b/test/unlocker/unlocker.vcxproj
@@ -77,6 +77,9 @@
   <ItemGroup>
     <ClCompile Include="unlocker.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\unlocker.hpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
